# controller/controllerCar.js
@@ -1,11 +1,14 @@
 import { getCars, getCar, getCarSeller, createCar, updateCar, deleteCar } from "../service/serviceCar.js";
+
 export const getCarsCont = async (req, res) => {
     try {
-      const cars = await getCars();
-      res.status(200).json({status: "success", menssage: "vehiculos obtenidos", data:cars});
+      const { brand, model, minPrice, maxPrice, orderby, order, limit=10, page=1 } = req.query;
+      const offset = (page - 1) * limit;
+      const cars = await getCars(brand, model, minPrice, maxPrice, orderby, order, offset, limit, page);
+      res.status(200).json({status: "success", menssage: "car list", data:cars});
     } catch (error) {
       console.log(error);
-      res.status(500).json({status: "error", menssage: "error en el servidor", data:{}});
+      res.status(500).json({status: "failed", menssage: "server error", data:{}});
     }
 };
 
@@ -14,11 +17,11 @@ export const getCarCont = async (req, res) => {
       const id = req.params.id;
       const car = await getCar(id);
       if (!car) {
-        return res.status(400).json({status: "error", menssage: "vehiculo no encontrado", data:{}});
+        return res.status(400).json({status: "failed", menssage: "car not found", data:{}});
       }
-      res.status(200).json({status: "success", menssage: "vehiculo encontrado", data:car});
+      res.status(200).json({status: "success", menssage: "car found", data:car});
     } catch (error) {
-      res.status(500).json({status: "error", menssage: "error en el servidor", data:{}});
+      res.status(500).json({status: "failed", menssage: "server error", data:{}});
     }
 };
 
@@ -27,11 +30,11 @@ export const getCarSellerCont = async (req, res) => {
       const id = req.params.id;
       const car = await getCarSeller(id);
       if(!car){
-          return res.status(400).json({status: "error", menssage: "vehiculo no encontrado", data:{}});
+          return res.status(400).json({status: "failed", menssage: "car not found", data:{}});
       }
-      return res.status(200).json({status: "success", menssage: "vehiculo encontrado", data:car});
+      return res.status(200).json({status: "success", menssage: "car found", data:car});
   } catch (error) {
-      return res.status(500).json({status: "error", menssage: "error en el servidor", data:{}});
+      return res.status(500).json({status: "failed", menssage: "server error", data:{}});
   }
 }
 
@@ -39,13 +42,13 @@ export const createCarCont = async (req, res) => {
     try {
       const { brand, model, color, year, description, price, urlToImage, seller } = req.body;
       if (!brand || !model || !color || !year || !description || !price || !urlToImage || !seller) {
-        return res.status(400).json({status: "error", menssage: "faltan datos", data:{}});
+        return res.status(400).json({status: "failed", menssage: "missing data", data:{}});
       }
       const car = await createCar(brand, model, color, year, description, price, urlToImage, seller);
-      return res.status(201).json({status: "success", menssage: "vehiculo creado", data:car});
+      return res.status(201).json({status: "success", menssage: "car created", data:car});
     } catch (error) {
       console.log(error);
-      return res.status(500).json({status: "error", menssage: "error en el servidor", data:{}});
+      return res.status(500).json({status: "failed", menssage: "server error", data:{}});
     }
 };
 
@@ -54,9 +57,9 @@ export const updateCarCont = async (req, res) => {
       const id = req.params.id;
       const { brand, model, color, year, description, price, urlToImage } = req.body;
       const car = await updateCar(id, brand, model, color, year, description, price, urlToImage);
-      res.status(200).json({status: "success", menssage: "vehiculo actualizado", data:car});
+      res.status(200).json({status: "success", menssage: "car updated", data:car});
     } catch (error) {
-      return res.status(500).json({status: "error", menssage: "error en el servidor", data:{}});
+      return res.status(500).json({status: "failed", menssage: "server error", data:{}});
     }
 };
 
@@ -64,8 +67,8 @@ export const deleteCarCont = async (req, res) => {
     try {
         const id = req.params.id;
         const car = await deleteCar(id);
-        res.status(200).json({status: "success", menssage: "vehiculo borrado", data:car});
+        res.status(200).json({status: "success", menssage: "car removed", data:car});
     } catch (error) {
-        return res.status(500).json({status: "error", menssage: "error en el servidor", data:{}});
+        return res.status(500).json({status: "failed", menssage: "server error", data:{}});
     }
 };
